Prevent masthead title from wrapping

--- a/src/client/_assets/css/components/masthead.css
+++ b/src/client/_assets/css/components/masthead.css
@@ -14,6 +14,10 @@
     line-height: 1.5;
     margin-bottom: 0;
 
+    @include mq-900 {
+      flex: 1 0 auto;
+    }
+
     a:link,
     a:visited {
       color: $blue;
